--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       <h2>Bienvenido al Metro de Medellín</h2>
                       <p class="fs-5">Valor del tiquete: 3.500 COP</p>
                     </div>
-                    <form   method="POST" data-netlify="true" action="#">     
+                    <form data-netlify="true">     
                           <div class= "mb-3">
                             <p class="fs-5">Digite la cantidad de tiquetes que desee comprar: </p>           
                             <input type="number" class="form-control" id="tickets" name="email" placeholder="Ejemplo: 2">
